# PhotoFetch

./: .gitignore  README.md  build.sh  pyproject.toml  requirements.txt
.github/workflows/: build.yml
src/photofetch/: __init__.py  __main__.py  app.py
src/photofetch/afc/: __init__.py  client.py  lockdown.py  protocol.py  usbmux.py
src/photofetch/routes/: batch.py  icloud.py  main.py  usb.py
src/photofetch/services/: icloud_service.py  usb_service.py
src/photofetch/static/: i18n.js
src/photofetch/templates/: index.html
tests/: test_afc.py  test_i18n.py  test_routes.py
