[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "photofetch"
version = "0.3.2"
description = "Browse and download photos from iPhone via USB or iCloud"
requires-python = ">=3.10"
license = {file = "LICENSE"}
dependencies = [
    "pyicloud==2.6.5",
    "flask==3.1.1",
    "pillow>=11.1.0",
    "pillow-heif>=0.21.0",
    "pywebview==5.3.2",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "piexif>=1.1.3"]

[project.scripts]
photofetch = "photofetch.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
